# libchef

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SConstruct  build.sh  chef_thread_group_test.dump  chunk_head_test.cc  clean.sh  deploy_virtual_box.sh  pretag.sh  unit_test.sh  ut.sh
include/chef_base/: chef_be_le_op.hpp  chef_buffer.hpp  chef_consistent_hash.hpp  chef_count_dump.hpp  chef_crypto_hmac_sha256.hpp  chef_crypto_md5_op.hpp  chef_crypto_sha1_op.hpp  chef_crypto_sha256_op.hpp  chef_daemon_op.hpp  chef_debug_counter.hpp  chef_debug_mutex.hpp  chef_defer.hpp  chef_encoding_base64_op.hpp  chef_env.hpp  chef_env_var_op.hpp  chef_filelock.hpp  chef_filepath_op.hpp  chef_fmt_op.hpp  chef_hash.hpp  chef_lru.hpp  chef_noncopyable.hpp  chef_os_exec_op.hpp  chef_skiplist.hpp  chef_snippet.hpp  chef_stringify_stl.hpp  chef_strings_op.hpp  chef_stuff_op.hpp  chef_sync_once.hpp  chef_task_thread.hpp  chef_this_machine_op.hpp  chef_this_process_op.hpp  chef_thread_group.hpp  chef_thread_pool.hpp  chef_url.hpp  chef_wait_event_counter.hpp  chef_weight_selector.hpp
output/base_test/: chef.logo
script/: clean.sh  common.sh  deploy_ubuntu.sh  install_macos_deps.sh  install_ubuntu_deps.sh  unit_test.sh  valgrind.sh
src/base/: Makefile  Makefile.bak  Makefile.bak2  README.md  SConscript  buffer.cc  buffer.h  chef_buffer.cc  chef_buffer.h  chef_buffer.hpp  chef_buffer_impl.hpp  chef_count_dump.cc  chef_count_dump.h  chef_count_dump.hpp  chef_count_dump_impl.hpp  chef_crypto_md5_op.cc  chef_crypto_md5_op.h  chef_crypto_md5_op.hpp  chef_crypto_md5_op_impl.hpp  chef_crypto_sha1_op.hpp  chef_defer.hpp  chef_encoding_base64_op.cc  chef_encoding_base64_op.h  chef_encoding_base64_op.hpp  chef_encoding_base64_op_impl.hpp  chef_env.hpp  chef_env_var_op.hpp  chef_filepath_op.cc  chef_filepath_op.h  chef_filepath_op.hpp  chef_filepath_op_impl.hpp  chef_fmt_op.hpp  chef_hash.hpp  chef_http_op.cc  chef_http_op.h  chef_http_op.hpp  chef_http_op_impl.hpp  chef_log.cc  chef_log.h  chef_log.hpp  (+86 more)
src/base/.unfinished/: os_exec_op.cc  stuff.cc  this_machine_op.h  this_thread_op.h
src/base/release/: buffer.d  chef_count_dump.d  chef_crypto_md5_op.d
src/base/unfinished/: chunk_head_op.h  lru.hpp  redis_backend.h
src/base/wrapper/: chef_http_op.hpp
src/base_test/: SConscript  assert_wrapper.h  buffer_test.cc  chef_buffer_test.cc  chef_count_dump_test.cc  chef_crypto_md5_op_test.cc  chef_crypto_sha1_op_test.cc  chef_defer_test.cc  chef_encoding_base64_op_test.cc  chef_env_var_op_test.cc  chef_filepath_op_test.cc  chef_fmt_op_test.cc  chef_hash_test.cc  chef_http_op_test.cc  chef_log_test.cc  chef_lru_test.cc  chef_os_exec_op_test.cc  chef_stringify_stl_test.cc  chef_strings_op_test.cc  chef_task_thread_test.cc  chef_this_machine_op_test.cc  chef_thread_group_test.cc  chef_thread_pool_test.cc  chef_wait_event_counter_test.cc  chef_wait_event_test.cc  chunk_head_op_test.cc  compress_zlib_op_test.cc  count_dump_test.cc  crypto_md5_op_test.cc  crypto_md5_test.cc  crypto_sha1_op_test.cc  daemon_op_test.cc  daemon_test.cc  dump_test.cc  dup.cc  encoding_base64_op_test.cc  encoding_base64_test.cc  filepath_op_test.cc  hash_test.cc  http_op_test.cc  (+18 more)
src/base_test/common/: assert_wrapper.hpp  check_log.hpp
src/chef_base/: Makefile  chef_buffer.hpp  chef_consistent_hash.hpp  chef_count_dump.hpp  chef_crypto_md5_op.hpp  chef_crypto_sha1_op.hpp  chef_daemon_op.hpp  chef_defer.hpp  chef_encoding_base64_op.hpp  chef_env.hpp  chef_env_var_op.hpp  chef_filelock.hpp  chef_filepath_op.hpp  chef_fmt_op.hpp  chef_hash.hpp  chef_lru.hpp  chef_noncopyable.hpp  chef_os_exec_op.hpp  chef_skiplist.hpp  chef_snippet.hpp  chef_stringify_stl.hpp  chef_strings_op.hpp  chef_stuff_op.hpp  chef_task_thread.hpp  chef_this_machine_op.hpp  chef_this_process_op.hpp  chef_thread_group.hpp  chef_thread_pool.hpp  chef_wait_event_counter.hpp  chef_weight_selector.hpp
src/chef_base/.dump/: chef_net_url_op.cc  chef_net_url_op.h
src/chef_base/.unfinished/: logo.cc  (+3 more)
src/chef_base_test/: CMakeLists.txt  SConscript  chef_buffer_test.cc  chef_consistent_hash_test.cc  chef_count_dump_test.cc  chef_crypto_md5_op_test.cc  chef_crypto_sha1_op_test.cc  chef_daemon_op_test.cc  chef_defer_test.cc  chef_encoding_base64_op_test.cc  chef_env_var_op_test.cc  chef_filelock_test.cc  chef_filepath_op_test.cc  chef_fmt_op_test.cc  chef_hash_test.cc  chef_http_op_test.cc  chef_log_test.cc  chef_lru_test.cc  chef_os_exec_op_test.cc  chef_skiplist_test.cc  chef_snippet_test.cc  chef_stringify_stl_test.cc  chef_strings_op_test.cc  chef_stuff_op_test.cc  chef_task_thread_test.cc  chef_this_machine_op_test.cc  chef_this_process_op_test.cc  chef_thread_group_test.cc  chef_thread_pool_test.cc  chef_wait_event_counter_test.cc  chef_wait_event_test.cc  chef_weight_selector_test.cc  chunk_head_op_test.cc  dup.cc  json_config_test.cc  logo_test.cc  macro_test.cc  noncopyable_test.cc
src/recipe/: SConscript  sleep_for.cc  thread_id.cc  volatile.cc  volitale.cc  yield.cc
test/: .ycm_extra_conf.py
test/chef_base_test/: CMakeLists.txt  SConscript  chef_be_le_op_test.cc  chef_buffer_test.cc  chef_consistent_hash_test.cc  chef_count_dump_test.cc  chef_crypto_hmac_sha256_test.cc  chef_crypto_md5_op_test.cc  chef_crypto_sha1_op_test.cc  chef_crypto_sha256_op_test.cc  chef_daemon_op_test.cc  chef_debug_counter_test.cc  chef_debug_mutex_test.cc  chef_defer_test.cc  chef_encoding_base64_op_test.cc  chef_env_var_op_test.cc  chef_filelock_test.cc  chef_filepath_op_test.cc  chef_fmt_op_test.cc  chef_hash_test.cc  chef_http_op_test.cc  chef_log_test.cc  chef_lru_test.cc  chef_os_exec_op_test.cc  chef_skiplist_test.cc  chef_snippet_test.cc  chef_stringify_stl_test.cc  chef_strings_op_test.cc  chef_stuff_op_test.cc  chef_sync_once_test.cc  chef_task_thread_test.cc  chef_this_machine_op_test.cc  chef_this_process_op_test.cc  chef_thread_group_test.cc  chef_thread_pool_test.cc  chef_url_test.cc  chef_wait_event_counter_test.cc  chef_wait_event_test.cc  chef_weight_selector_test.cc  chunk_head_op_test.cc  (+4 more)
test/chef_base_test/common/: check_log.hpp
(+5 files in other folders)
